--- a/style.css
+++ b/style.css
@@ -6,6 +6,13 @@ body {
   font-style: normal;
 }
 
+header {
+  background-color: #043449;
+}
+header h1 {
+  color: white;
+}
+
 h1 {
   font-weight: 800;
 }
