--- a/style.scss
+++ b/style.scss
@@ -5,6 +5,12 @@ body {
   font-weight: 400;
   font-style: normal;
 }
+header{
+    background-color: #043449;
+    h1 {
+        color: white;
+    }
+}
 h1 {
     font-weight: 800;
 }
