--- a/style.scss
+++ b/style.scss
@@ -4,6 +4,7 @@ body {
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
+  overflow-y: hidden;
 }
 header{
     background-color: #043449;
